fix: align content in .content-wrapper

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,6 @@ html, body {
     background-color: #5b654a;
     color: #d8d1bd;
     line-height: 1.6;
-    height: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column; /* Додано для вертикального вирівнювання на мобільних */
